# blueprint

./: .audit-rules  .dockerignore  .gitignore  AGENTS.md  CHECKLIST-LAUNCH.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  MIGRATION_EVM_ONLY.md  PHASE2_COMPLETION_SUMMARY.md  PROTOCOL_ARCHITECTURE.md  PROTOCOL_IMPLEMENTATION_SUMMARY.md  README.md  TANGLE_HANDLER_AUDIT.md  blueprint-manager-config-spec.md  blueprint-services-spec.md  blueprint_apikey.json  blueprint_oauth.json  cli-remote-deployment-spec.md  converge-progress.md  dist-workspace.toml  implementation-roadmap.md  phase2-integration-plan.md  pr_reviews_comments.txt  pursue-sdk-quality.md  release-plz.toml  rust-toolchain.toml
cli/: CHANGELOG.md  Cargo.toml  README.md
cli/examples/: .env.harness.example  harness.example.toml  harness.production.toml
cli/src/: lib.rs  main.rs  settings.rs  utils.rs  workspace.rs
cli/src/anvil/: error.rs  mod.rs  state.rs
cli/src/command/: delegator.rs  keys.rs  mod.rs  operator.rs  register.rs  signer.rs  tangle.rs
cli/src/tests/: delegator.rs  deploy.rs  jobs.rs  keys.rs  mod.rs  operator.rs  registration.rs  service_cli.rs  util.rs
cli/templates/tangle-evm/: Cargo.toml  cargo-generate.toml
cli/tests/: cloud_commands.rs
contract-deployer/: Cargo.toml  build.rs
contract-deployer/src/: core.rs  deploy.rs  helpers.rs  lib.rs  main.rs  permissions.rs
contract-deployer/src/bindings/: mod.rs
crates/auth/: AGENTS.md  AUTH_WORKFLOW.md  CHANGELOG.md  Cargo.toml  README.md  build.rs
crates/auth/fixtures/: AGENTS.md  sign.ts
crates/auth/proto/: AGENTS.md  grpc_proxy_test.proto
crates/auth/src/: AGENTS.md  api_keys.rs  api_tokens.rs  auth_token.rs  certificate_authority.rs  db.rs  lib.rs  main.rs  models.rs  multi_tenancy_tests.rs  paseto_tokens.rs  proxy.rs  request_auth.rs  request_extensions.rs  security_isolation_tests.rs  test_client.rs  tls_assets.rs  tls_client.rs  tls_envelope.rs  tls_listener.rs  token_exchange_tests.rs  types.rs  validation.rs
crates/benchmarking/: AGENTS.md  CHANGELOG.md  Cargo.toml  README.md
crates/benchmarking/src/: AGENTS.md  lib.rs
crates/blueprint-faas/: AGENTS.md  Cargo.toml  README.md
crates/blueprint-faas/examples/: AGENTS.md  http_faas_blueprint.rs  reference_faas_server.rs
crates/blueprint-faas/src/: AGENTS.md  core.rs  lib.rs
crates/blueprint-faas/tests/: AGENTS.md  digitalocean_integration.rs  faas_standalone.rs  http_executor_basic.rs  http_faas_integration.rs  reference_server_integration.rs  registry_test.rs
crates/blueprint-profiling/: AGENTS.md  Cargo.toml  README.md
crates/blueprint-profiling/examples/: AGENTS.md  basic_usage.rs  memory_profiling.rs  simple_profiling.rs
crates/blueprint-profiling/src/: AGENTS.md  lib.rs
crates/blueprint-profiling/tests/: AGENTS.md  basic_profiling.rs
crates/blueprint-remote-providers/: AGENTS.md  ARCHITECTURE.md  AUDIT_FINDINGS.md  CHANGELOG.md  CONSOLIDATION_PLAN.md  Cargo.toml  FILE_SIZE_OPTIMIZATION_REPORT.md  IMPLEMENTATION_SUMMARY.md  MERGE_READY.md  Makefile  PROVIDER_FEATURE_MATRIX.md  README.md
crates/blueprint-remote-providers/docs/: gcp-rust-sdk-migration.md  serverless-architecture.md
crates/blueprint-remote-providers/examples/: manager_integration.rs  remote_deployment.rs  verify_pricing.rs
crates/blueprint-remote-providers/scripts/: setup-test-env.sh
crates/blueprint-remote-providers/src/: AGENTS.md  auth_integration.rs  auto_deployment.rs  blueprint_extensions.rs  blueprint_requirements.rs  bridge.rs  cloud_pricing.rs  cloud_provisioner.rs  config.rs  cost.rs  deployment_tracker.rs  error.rs  health_monitor.rs  heartbeat_integration.rs  infrastructure.rs  infrastructure_azure.rs  infrastructure_digitalocean.rs  infrastructure_gcp.rs  infrastructure_unified.rs  infrastructure_vultr.rs  lib.rs  local_enforcement.rs  machine_discovery.rs  manager_integration.rs  networking.rs  observability.rs  pricing_adapter.rs  pricing_integration.rs  pricing_service.rs  pricing_unified.rs  provider.rs  provider_api_tests.rs  provisioning.rs  remote.rs  resilience.rs  resources.rs  resources_simple.rs  runtime_interface.rs  secure_bridge.rs  security.rs  (+7 more)
crates/blueprint-remote-providers/test_data/: do_create_droplet.json  ec2_run_instances.xml
crates/blueprint-remote-providers/tests/: AGENTS.md  README.md  blueprint_deployment_integration.rs  blueprint_real_sdk_tests.rs  blueprint_reality_test.rs  cloud_api_security.rs  command_injection_security.rs  command_injection_unit_tests.rs  container_security.rs  deployment_decision_tests.rs  e2e_tests.rs  (+21 more)
crates/build-utils/: AGENTS.md  CHANGELOG.md  Cargo.toml  README.md
crates/chain-setup/: AGENTS.md  CHANGELOG.md  Cargo.toml  README.md
crates/clients/: AGENTS.md  CHANGELOG.md  Cargo.toml  README.md
crates/contexts/: AGENTS.md  CHANGELOG.md  Cargo.toml  README.md
crates/core/: AGENTS.md  CHANGELOG.md  Cargo.toml  README.md
crates/crypto/: AGENTS.md  CHANGELOG.md  Cargo.toml  README.md
crates/eigenlayer-extra/: AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  example-avs-config.json
crates/keystore/: AGENTS.md  CHANGELOG.md  Cargo.toml  README.md
crates/macros/: AGENTS.md  CHANGELOG.md  Cargo.toml  README.md
crates/manager/: AGENTS.md  CHANGELOG.md  Cargo.toml  DEPLOYMENT_ARCHITECTURE.md  README.md
crates/metrics/: AGENTS.md  CHANGELOG.md  Cargo.toml  README.md
crates/networking/: AGENTS.md  CHANGELOG.md  Cargo.toml
crates/pricing-engine/: AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  TESTING.md  build.rs  operator.toml
crates/pricing-engine-simple/: Cargo.toml  README.md
crates/qos/: AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  build.rs
crates/router/: AGENTS.md  CHANGELOG.md  Cargo.toml  README.md
crates/runner/: AGENTS.md  CHANGELOG.md  Cargo.toml  README.md
crates/sdk/: AGENTS.md  CHANGELOG.md  Cargo.toml  README.md
crates/stores/: AGENTS.md  CHANGELOG.md  Cargo.toml  README.md
crates/tangle-aggregation-svc/: AGENTS.md  CHANGELOG.md  Cargo.toml  README.md
crates/tangle-evm-extra/: Cargo.toml  README.md
crates/tangle-extra/: AGENTS.md  CHANGELOG.md  Cargo.toml  README.md
(+1444 files in other folders)
