[workspace]
resolver = "2"
members = ["cli", "crates/*", "crates/networking/extensions/*", "examples/incredible-squaring-eigenlayer"]

[workspace.package]
authors = ["Tangle Network"]
edition = "2024"
license = "MIT OR Apache-2.0"
homepage = "https://tangle.tools"
repository = "https://github.com/tangle-network/blueprint"
rust-version = "1.86"

[workspace.lints.rust]
rust_2018_idioms = { level = "deny", priority = -1 }
trivial_casts = "deny"
trivial_numeric_casts = "deny"
unused_import_braces = "deny"
async_fn_in_trait = "allow"

[workspace.lints.clippy]
pedantic = { level = "deny", priority = -1 }
all = { level = "deny", priority = -1 }
single_match_else = "allow"
uninlined_format_args = "allow"
needless_late_init = "allow"
struct_excessive_bools = "allow"
large_enum_variant = "allow"                 # TODO: Fix instances of this
result_large_err = "allow"                   # TODO: Fix instances of this
similar_names = "allow"
assigning_clones = "allow"
transmute_ptr_to_ptr = "allow"
items_after_statements = "allow"
match_wildcard_for_single_variants = "allow"
too_many_lines = "allow"

[workspace.lints.rustdoc]
broken_intra_doc_links = "deny"

[workspace.dependencies]
# SDKs (overarching crates that include all other crates)
blueprint-sdk = { version = "0.1.0-alpha.6", path = "./crates/sdk", default-features = false }

# Job system
blueprint-core = { version = "0.1.0-alpha.1", path = "crates/core", default-features = false }
blueprint-router = { version = "0.1.0-alpha.1", path = "crates/router", default-features = false }
blueprint-runner = { version = "0.1.0-alpha.5", path = "crates/runner", default-features = false }

# Extras
blueprint-tangle-extra = { version = "0.1.0-alpha.3", path = "crates/tangle-extra", default-features = false }
blueprint-evm-extra = { version = "0.1.0-alpha.1", path = "crates/evm-extra", default-features = false }
blueprint-eigenlayer-extra = { version = "0.1.0-alpha.2", path = "crates/eigenlayer-extra", default-features = false }
blueprint-producers-extra = { version = "0.1.0-alpha.1", path = "crates/producers-extra", default-features = false }

# Blueprint Examples
incredible-squaring-blueprint = { version = "0.1.1", path = "./examples/incredible-squaring", default-features = false }
incredible-squaring-blueprint-eigenlayer = { version = "0.1.1", path = "./examples/incredible-squaring-eigenlayer", default-features = false }

# Blueprint utils
blueprint-manager = { version = "0.3.0-alpha.6", path = "./crates/manager", default-features = false }
blueprint-build-utils = { version = "0.1.0-alpha.1", path = "./crates/build-utils", default-features = false }

# Chain Setup
blueprint-chain-setup = { version = "0.1.0-alpha.6", path = "./crates/chain-setup", default-features = false }
blueprint-chain-setup-common = { version = "0.1.0-alpha.6", path = "./crates/chain-setup/common", default-features = false }
blueprint-chain-setup-tangle = { version = "0.1.0-alpha.6", path = "./crates/chain-setup/tangle", default-features = false }
blueprint-chain-setup-anvil = { version = "0.1.0-alpha.6", path = "./crates/chain-setup/anvil", default-features = false }

# Crypto
blueprint-crypto-core = { version = "0.1.0-alpha.2", path = "./crates/crypto/core", default-features = false }
blueprint-crypto-k256 = { version = "0.1.0-alpha.2", path = "./crates/crypto/k256", default-features = false }
blueprint-crypto-sr25519 = { version = "0.1.0-alpha.2", path = "./crates/crypto/sr25519", default-features = false }
blueprint-crypto-ed25519 = { version = "0.1.0-alpha.2", path = "./crates/crypto/ed25519", default-features = false }
blueprint-crypto-hashing = { version = "0.1.0-alpha.1", path = "./crates/crypto/hashing", default-features = false }
blueprint-crypto-bls = { version = "0.1.0-alpha.2", path = "./crates/crypto/bls", default-features = false }
blueprint-crypto-bn254 = { version = "0.1.0-alpha.2", path = "./crates/crypto/bn254", default-features = false }
blueprint-crypto-sp-core = { version = "0.1.0-alpha.2", path = "./crates/crypto/sp-core", default-features = false }
blueprint-crypto = { version = "0.1.0-alpha.3", path = "./crates/crypto", default-features = false }
blueprint-crypto-tangle-pair-signer = { version = "0.1.0-alpha.3", path = "./crates/crypto/tangle-pair-signer", default-features = false }

# Clients
blueprint-clients = { version = "0.1.0-alpha.6", path = "./crates/clients", default-features = false }
blueprint-client-core = { version = "0.1.0-alpha.1", path = "./crates/clients/core", default-features = false }
blueprint-client-eigenlayer = { version = "0.1.0-alpha.5", path = "./crates/clients/eigenlayer", default-features = false }
blueprint-client-evm = { version = "0.1.0-alpha.1", path = "./crates/clients/evm", default-features = false }
blueprint-client-tangle = { version = "0.1.0-alpha.6", path = "./crates/clients/tangle", default-features = false }
blueprint-contexts = { version = "0.1.0-alpha.6", path = "./crates/contexts", default-features = false }

# Macros
blueprint-macros = { version = "0.1.0-alpha.1", path = "./crates/macros", default-features = false }
blueprint-context-derive = { version = "0.1.0-alpha.3", path = "./crates/macros/context-derive", default-features = false }

# Stores
blueprint-stores = { version = "0.1.0-alpha.1", path = "./crates/stores", default-features = false }
blueprint-store-local-database = { version = "0.1.0-alpha.1", path = "./crates/stores/local-database", default-features = false }

# SDK
blueprint-keystore = { version = "0.1.0-alpha.4", path = "./crates/keystore", default-features = false }
blueprint-std = { version = "0.1.0-alpha.1", path = "./crates/std", default-features = false }

# P2P
blueprint-networking = { version = "0.1.0-alpha.3", path = "./crates/networking", default-features = false }
blueprint-networking-round-based-extension = { version = "0.1.0-alpha.3", path = "./crates/networking/extensions/round-based", default-features = false }
blueprint-networking-agg-sig-gossip-extension = { version = "0.1.0-alpha.2", path = "./crates/networking/extensions/agg-sig-gossip", default-features = false }

# Testing utilities
blueprint-testing-utils = { version = "0.1.0-alpha.6", path = "./crates/testing-utils", default-features = false }
blueprint-core-testing-utils = { version = "0.1.0-alpha.6", path = "./crates/testing-utils/core", default-features = false }
blueprint-anvil-testing-utils = { version = "0.1.0-alpha.6", path = "./crates/testing-utils/anvil", default-features = false }
blueprint-tangle-testing-utils = { version = "0.1.0-alpha.6", path = "./crates/testing-utils/tangle", default-features = false }
blueprint-eigenlayer-testing-utils = { version = "0.1.0-alpha.6", path = "./crates/testing-utils/eigenlayer", default-features = false }

# Metrics
blueprint-metrics = { version = "0.1.0-alpha.1", path = "./crates/metrics", default-features = false }
blueprint-metrics-rpc-calls = { version = "0.1.0-alpha.1", path = "./crates/metrics/rpc-calls", default-features = false }

cargo-tangle = { version = "0.4.0-alpha.7", path = "./cli", default-features = false }
cargo_metadata = { version = "0.18.1" }
tnt-core-bytecode = { version = "0.4.0", default-features = false }

# Tangle-related dependencies
tangle-subxt = { version = "0.15", default-features = false }
round-based = { version = "0.4.1", default-features = false }

# Substrate dependencies
sp-core = { version = "34.0.0", default-features = false }
sp-io = { version = "38.0.1", default-features = false }
sp-runtime = { version = "39.0.0", default-features = false }
sp-keystore = { version = "0.40.0", default-features = false }
sc-keystore = { version = "33.0.0", default-features = false }
sp-application-crypto = { version = "38.0.0", default-features = false }
scale-info = { version = "2.11", default-features = false }
parity-scale-codec = { version = "3.6", default-features = false }

# Async & Runtime
crossbeam = { version = "0.8", default-features = false }
crossbeam-channel = { version = "0.5", default-features = false }
futures = { version = "0.3.30", default-features = false }
futures-util = { version = "0.3.31", default-features = false }
futures-core = { version = "0.3.31", default-features = false }
tokio = { version = "^1", default-features = false }
tokio-util = { version = "^0.7", default-features = false }
tokio-cron-scheduler = { version = "0.13.0", default-features = false }
tokio-stream = { version = "^0.1", default-features = false }
pin-project-lite = "0.2.7"
tower = { version = "0.5.2", default-features = false }
async-stream = { version = "0.3.6", default-features = false }

# CLI & Configuration
cargo-generate = { version = "0.23", default-features = false }
clap = { version = "4.5.36" }
clap-cargo = { version = "0.14", default-features = false }
toml = { version = "0.8.19", default-features = false }
dialoguer = { version = "0.11.0", default-features = false }
dotenv = { version = "0.15", default-features = false }

# Cryptography & Blockchain
bip39 = { version = "2.1.0", default-features = false }
ed25519-zebra = { version = "4", default-features = false }
ethereum-types = { version = "0.14.1", default-features = false }
hex = { version = "0.4.3", default-features = false }
k256 = { version = "0.13.3", default-features = false }
rand = { version = "0.8.5", default-features = false }
schnorrkel = { version = "0.11.4", default-features = false }
sha2 = { version = "0.10.8", default-features = false }
sha3 = { version = "0.10.8", default-features = false }
tnt-bls = { version = "0.1.8", default-features = false }
tiny-keccak = { version = "2.0.2", default-features = false }

# Data Structures & Serialization
bitvec = { version = "1.0.1", default-features = false, features = ["atomic", "alloc"] }
bincode = { version = "1.3.3", default-features = false }
cid = { version = "0.11.1", default-features = false }
indexmap = { version = "2.9.0", default-features = false }
lazy_static = { version = "1.5.0", default-features = false }
serde = { version = "1.0.208", default-features = false }
serde_bytes = { version = "0.11.15", default-features = false }
serde_json = { version = "1.0", default-features = false }
serde_test = { version = "1.0.177", default-features = false }
dynosaur = { version = "0.2.0", default-features = false }
bytes = { version = "1.10.1", default-features = false }
hashbrown = { version = "0.15.2", default-features = false }

# Error Handling & Logging
anyhow = { version = "1.0.98", default-features = false }
color-eyre = { version = "0.6", default-features = false }
colored = { version = "3.0.0", default-features = false }
log = { version = "0.4.22", default-features = false }
thiserror = { version = "2.0.6", default-features = false }
tracing = { version = "0.1", default-features = false }
tracing-core = { version = "0.1.33", default-features = false }
tracing-subscriber = { version = "0.3", default-features = false }

# Networking & HTTP
jsonrpc-core = { version = "18.0.0", default-features = false }
jsonrpc-http-server = { version = "18.0.0", default-features = false }
libp2p = { version = "0.55.0", default-features = false }
reqwest = { version = "0.12.7", default-features = false }
url = { version = "2.5.2", default-features = false }
hyper = "1.6.0"
hyperlocal = "0.9.1"
hyper-util = "0.1.11"
http-body-util = "0.1.3"

# System & OS
fs2 = { version = "0.4", default-features = false }
lock_api = { version = "0.4.12", default-features = false }
nix = { version = "0.29.0", default-features = false }
parking_lot = { version = "0.12.3", default-features = false }
sysinfo = { version = "0.34.2", default-features = false }
tempfile = { version = "3.13.0", default-features = false }
uuid = { version = "1.16.0", default-features = false }
blake3 = { version = "1.8.0", default-features = false }
chrono = { version = "0.4.40", default-features = false }

# Development & Testing
auto_impl = { version = "1.2.1", default-features = false }
eigenlayer-contract-deployer = { version = "0.1.0", default-features = false }
cargo_toml = { version = "0.21.0", default-features = false }
docktopus = { version = "0.4.0-alpha.1", default-features = false }
itertools = { version = "0.14.0", default-features = false }
paste = { version = "1.0.15", default-features = false }
proc-macro2 = { version = "1.0", default-features = false }
quote = { version = "1.0", default-features = false }
rustdoc-types = { version = "0.35.0", default-features = false }
syn = { version = "2.0", default-features = false }
trybuild = { version = "1.0", default-features = false }
typed-builder = { version = "0.19", default-features = false }
dirs = { version = "6.0.0", default-features = false }
serial_test = { version = "3.2.0", default-features = false }
indicatif = { version = "0.17.8", default-features = false }
document-features = "0.2.11"
rustversion = "1.0.20"

# Alloy (EVM)
alloy = { version = "0.12", default-features = false }
alloy-primitives = { version = "0.8", default-features = false }
alloy-json-abi = { version = "0.8", default-features = false }
alloy-json-rpc = { version = "0.12", default-features = false }
alloy-dyn-abi = { version = "0.8", default-features = false }
alloy-sol-types = { version = "0.8", default-features = false }
alloy-rlp = { version = "0.3", default-features = false }
alloy-rpc-client = { version = "0.12", default-features = false }
alloy-rpc-types = { version = "0.12", default-features = false }
alloy-rpc-types-eth = { version = "0.12", default-features = false }
alloy-provider = { version = "0.12", default-features = false, features = ["reqwest", "ws"] }
alloy-pubsub = { version = "0.12", default-features = false }
alloy-signer = { version = "0.12", default-features = false }
alloy-signer-local = { version = "0.12", default-features = false }
alloy-network = { version = "0.12", default-features = false }
alloy-node-bindings = { version = "0.12", default-features = false }
alloy-contract = { version = "0.12", default-features = false }
alloy-consensus = { version = "0.12", default-features = false }
alloy-transport = { version = "0.12", default-features = false }
alloy-transport-http = { version = "0.12", default-features = false }
ripemd = { version = "0.1.3", default-features = false }
libsecp256k1 = { version = "0.7.2", default-features = false }

# Remote signing
alloy-signer-aws = { version = "0.12", default-features = false }
alloy-signer-gcp = { version = "0.12", default-features = false }
alloy-signer-ledger = { version = "0.12", default-features = false, features = ["eip712"] }
aws-config = { version = "1", default-features = false }
aws-sdk-kms = { version = "1", default-features = false }
gcloud-sdk = { version = "0.26", default-features = false }

# Arkworks
ark-bn254 = { version = "0.5.0", default-features = false }
ark-ec = { version = "0.5.0", default-features = false }
ark-ff = { version = "0.5.0", default-features = false }
ark-serialize = { version = "0.5.0", default-features = false, features = ["derive"] }
num-bigint = { version = "0.4.6", default-features = false }
num-traits = { version = "0.2.19", default-features = false }
rayon = { version = "1", default-features = false }
zeroize = { version = "1.8.1", default-features = false }

# Eigenlayer
eigensdk = { version = "0.5.0", default-features = false }
rust-bls-bn254 = { version = "0.2.1", default-features = false }
testcontainers = { version = "0.23.1", default-features = false }

# Symbiotic
symbiotic-rs = { version = "0.1.1" }
dashmap = { version = "6.1.0", default-features = false }
lru-mem = { version = "0.3.0", default-features = false }

# Metrics
metrics = { version = "0.24.2", default-features = false }

[profile.dev.package.backtrace]
opt-level = 3

[profile.release.package."cargo-tangle"]
debug = true

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
