[workspace]
resolver = "3"
members = [
    "cli",
    "crates/*",
    "crates/networking/extensions/*",
    "crates/manager/bridge",
    "examples/oauth-blueprint/oauth-blueprint-lib",
    "examples/oauth-blueprint/oauth-blueprint-bin",
    "examples/apikey-blueprint/apikey-blueprint-lib",
    "examples/apikey-blueprint/apikey-blueprint-bin",
    "examples/incredible-squaring/incredible-squaring-lib",
    "examples/incredible-squaring/incredible-squaring-bin",
    "examples/incredible-squaring-eigenlayer",
    "examples/hello-tangle",
    "examples/x402-blueprint",
    "workspace-hack",
]

[workspace.package]
authors = ["Tangle Network"]
edition = "2024"
license = "MIT OR Apache-2.0"
homepage = "https://tangle.tools"
repository = "https://github.com/tangle-network/blueprint"
rust-version = "1.88"

[workspace.lints.rust]
rust_2018_idioms = { level = "deny", priority = -1 }
trivial_casts = "allow"                      # TODO: Remove unnecessary casts
trivial_numeric_casts = "allow"              # TODO: Remove trivial numeric casts
unused_import_braces = "deny"
async_fn_in_trait = "allow"
elided_lifetimes_in_paths = "allow"          # TODO: Add explicit lifetime parameters

[workspace.lints.clippy]
pedantic = { level = "deny", priority = -1 }
all = { level = "deny", priority = -1 }
# Genuinely stylistic -- keep suppressed
single_match_else = "allow"
uninlined_format_args = "allow"
struct_excessive_bools = "allow"
large_enum_variant = "allow"
result_large_err = "allow"
similar_names = "allow"
items_after_statements = "allow"
match_wildcard_for_single_variants = "allow"
too_many_lines = "allow"
ignore_without_reason = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
must_use_candidate = "allow"
return_self_not_must_use = "allow"
too_many_arguments = "allow"
match_same_arms = "allow"
doc_markdown = "allow"
wildcard_imports = "allow"
cast_possible_wrap = "allow"
cast_precision_loss = "allow"
needless_pass_by_value = "allow"
if_not_else = "allow"
implicit_hasher = "allow"
fn_params_excessive_bools = "allow"
type_complexity = "allow"
large_futures = "allow"
wrong_self_convention = "allow"
# Many existing violations -- fix incrementally
manual_let_else = "allow"
redundant_closure = "allow"
redundant_closure_for_method_calls = "allow"
unused_async = "allow"
map_unwrap_or = "allow"
used_underscore_binding = "allow"
assigning_clones = "allow"
field_reassign_with_default = "allow"
unnecessary_wraps = "allow"
unused_self = "allow"
duplicated_attributes = "allow"
# Cast lints -- too pervasive in low-level code
cast_lossless = "allow"
cast_possible_truncation = "allow"
cast_sign_loss = "allow"
# Pedantic style -- many violations
ignored_unit_patterns = "allow"
unchecked_duration_subtraction = "allow"
redundant_slicing = "allow"
transmute_ptr_to_ptr = "allow"
unreadable_literal = "allow"
needless_continue = "allow"
implicit_clone = "allow"
manual_string_new = "allow"
single_char_pattern = "allow"
default_trait_access = "allow"
explicit_iter_loop = "allow"
unnecessary_debug_formatting = "allow"
format_push_string = "allow"
needless_raw_string_hashes = "allow"
comparison_chain = "allow"
bool_to_int_with_if = "allow"
cloned_instead_of_copied = "allow"
manual_inspect = "allow"
trivially_copy_pass_by_ref = "allow"
unnecessary_map_or = "allow"
inconsistent_struct_constructor = "allow"
missing_fields_in_debug = "allow"
redundant_else = "allow"
unnested_or_patterns = "allow"
semicolon_if_nothing_returned = "allow"
diverging_sub_expression = "allow"
double_must_use = "allow"
needless_borrows_for_generic_args = "allow"
# Remaining style lints with violations in CLI/examples
unnecessary_filter_map = "allow"
print_literal = "allow"
option_as_ref_cloned = "allow"
manual_div_ceil = "allow"
derivable_impls = "allow"
collapsible_else_if = "allow"
no_effect_underscore_binding = "allow"
manual_range_contains = "allow"

[workspace.lints.rustdoc]
broken_intra_doc_links = "deny"

[workspace.dependencies]
# SDKs (overarching crates that include all other crates)
blueprint-sdk = { version = "0.2.0-alpha.1", path = "./crates/sdk", default-features = false }
tnt-core-bindings = "0.10.6"

# Job system
blueprint-core = { version = "0.2.0-alpha.1", path = "crates/core", default-features = false }
blueprint-router = { version = "0.2.0-alpha.1", path = "crates/router", default-features = false }
blueprint-runner = { version = "0.2.0-alpha.1", path = "crates/runner", default-features = false }

# Extras
blueprint-tangle-extra = { version = "0.2.0-alpha.1", path = "crates/tangle-extra", features = ["std"] }
blueprint-evm-extra = { version = "0.2.0-alpha.1", path = "crates/evm-extra", default-features = false }
blueprint-eigenlayer-extra = { version = "0.2.0-alpha.1", path = "crates/eigenlayer-extra", default-features = false }
blueprint-producers-extra = { version = "0.2.0-alpha.1", path = "crates/producers-extra", default-features = false }
blueprint-tangle-aggregation-svc = { version = "0.2.0-alpha.1", path = "crates/tangle-aggregation-svc", default-features = false }

# Blueprint utils
blueprint-manager = { version = "0.4.0-alpha.1", path = "./crates/manager", default-features = false }
blueprint-manager-bridge = { version = "0.2.0-alpha.1", path = "./crates/manager/bridge", default-features = false }
blueprint-remote-providers = { version = "0.2.0-alpha.1", path = "./crates/blueprint-remote-providers", default-features = false }
blueprint-faas = { version = "0.2.0-alpha.1", path = "./crates/blueprint-faas", default-features = false }
blueprint-profiling = { version = "0.2.0-alpha.1", path = "./crates/blueprint-profiling", default-features = false }

# Example blueprints
incredible-squaring-blueprint-lib = { version = "0.2.0-alpha.1", path = "./examples/incredible-squaring/incredible-squaring-lib", default-features = false }
blueprint-build-utils = { version = "0.2.0-alpha.1", path = "./crates/build-utils", default-features = false }
blueprint-auth = { version = "0.2.0-alpha.1", path = "./crates/auth", default-features = false }

# Chain Setup
blueprint-chain-setup = { version = "0.2.0-alpha.1", path = "./crates/chain-setup", default-features = false }
blueprint-chain-setup-anvil = { version = "0.2.0-alpha.1", path = "./crates/chain-setup/anvil", default-features = false }

# Crypto
blueprint-crypto-core = { version = "0.2.0-alpha.1", path = "./crates/crypto/core", default-features = false }
blueprint-crypto-k256 = { version = "0.2.0-alpha.1", path = "./crates/crypto/k256", default-features = false }
blueprint-crypto-sr25519 = { version = "0.2.0-alpha.1", path = "./crates/crypto/sr25519", default-features = false }
blueprint-crypto-ed25519 = { version = "0.2.0-alpha.1", path = "./crates/crypto/ed25519", default-features = false }
blueprint-crypto-hashing = { version = "0.2.0-alpha.1", path = "./crates/crypto/hashing", default-features = false }
blueprint-crypto-bls = { version = "0.2.0-alpha.1", path = "./crates/crypto/bls", default-features = false }
blueprint-crypto-bn254 = { version = "0.2.0-alpha.1", path = "./crates/crypto/bn254", default-features = false }
blueprint-crypto = { version = "0.2.0-alpha.1", path = "./crates/crypto", default-features = false }

# Clients
blueprint-clients = { version = "0.2.0-alpha.1", path = "./crates/clients", default-features = false }
blueprint-client-core = { version = "0.2.0-alpha.1", path = "./crates/clients/core", default-features = false }
blueprint-client-eigenlayer = { version = "0.2.0-alpha.1", path = "./crates/clients/eigenlayer", default-features = false }
blueprint-client-evm = { version = "0.2.0-alpha.1", path = "./crates/clients/evm", default-features = false }
blueprint-client-tangle = { version = "0.2.0-alpha.1", path = "./crates/clients/tangle", default-features = false, features = ["std"] }
blueprint-contexts = { version = "0.2.0-alpha.1", path = "./crates/contexts", default-features = false }

# Pricing Engine
blueprint-pricing-engine = { version = "0.3.0-alpha.1", path = "./crates/pricing-engine", default-features = false }

# TEE Support
blueprint-tee = { version = "0.2.0-alpha.1", path = "./crates/tee", default-features = false }

# x402 Payment Gateway
blueprint-x402 = { version = "0.2.0-alpha.1", path = "./crates/x402", default-features = false }

# Webhook Producer
blueprint-webhooks = { version = "0.2.0-alpha.1", path = "./crates/webhooks", default-features = false }

# Macros
blueprint-macros = { version = "0.2.0-alpha.1", path = "./crates/macros", default-features = false }
blueprint-context-derive = { version = "0.2.0-alpha.1", path = "./crates/macros/context-derive", default-features = false }

# Quality of Service
blueprint-qos = { version = "0.2.0-alpha.1", path = "./crates/qos", default-features = false }

# Stores
blueprint-stores = { version = "0.2.0-alpha.1", path = "./crates/stores", default-features = false }
blueprint-store-local-database = { version = "0.2.0-alpha.1", path = "./crates/stores/local-database", default-features = false }
rocksdb = { version = "0.21.0", default-features = false }

# SDK
blueprint-keystore = { version = "0.2.0-alpha.1", path = "./crates/keystore", default-features = false }
blueprint-std = { version = "0.2.0-alpha.1", path = "./crates/std", default-features = false }

# P2P
blueprint-networking = { version = "0.2.0-alpha.1", path = "./crates/networking", default-features = false }
blueprint-networking-round-based-extension = { version = "0.2.0-alpha.1", path = "./crates/networking/extensions/round-based", default-features = false }
blueprint-networking-agg-sig-gossip-extension = { version = "0.2.0-alpha.1", path = "./crates/networking/extensions/agg-sig-gossip", default-features = false }
blueprint-gossip-primitives = { version = "0.2.0-alpha.1", path = "./crates/networking/extensions/gossip-primitives", default-features = false }

# Testing utilities
blueprint-testing-utils = { version = "0.2.0-alpha.1", path = "./crates/testing-utils", default-features = false }
blueprint-core-testing-utils = { version = "0.2.0-alpha.1", path = "./crates/testing-utils/core", default-features = false }
blueprint-anvil-testing-utils = { version = "0.2.0-alpha.1", path = "./crates/testing-utils/anvil", default-features = false }
blueprint-eigenlayer-testing-utils = { version = "0.2.0-alpha.1", path = "./crates/testing-utils/eigenlayer", default-features = false }

# Metrics
blueprint-metrics = { version = "0.2.0-alpha.1", path = "./crates/metrics", default-features = false }
blueprint-metrics-rpc-calls = { version = "0.2.0-alpha.1", path = "./crates/metrics/rpc-calls", default-features = false }

cargo-tangle = { version = "0.5.0-alpha.1", path = "./cli", default-features = false }
cargo_metadata = { version = "0.18.1" }
bollard = { version = "0.18.0", features = ["ssl"] }

# Round-based networking
round-based = { version = "0.4.1", default-features = false }

# Async & Runtime
async-trait = { version = "0.1", default-features = false }
crossbeam = { version = "0.8", default-features = false }
crossbeam-channel = { version = "0.5", default-features = false }
futures = { version = "0.3.32", default-features = false }
futures-util = { version = "0.3.31", default-features = false }
futures-core = { version = "0.3.31", default-features = false }
tokio = { version = "^1", default-features = false }
tokio-util = { version = "^0.7", default-features = false }
tokio-cron-scheduler = { version = "0.13.0", default-features = false }
once_cell = { version = "1.19.0", default-features = false, features = ["std"] }
x509-parser = { version = "0.18.0" }
tokio-stream = { version = "0.1.15", default-features = false, features = ["net"] }
pin-project-lite = "0.2.17"
tower = { version = "0.5.2", default-features = false }
tower-http = { version = "0.6", default-features = false }
async-stream = { version = "0.3.6", default-features = false }

# CLI & Configuration
cargo-generate = { version = "0.23.7", default-features = false }
clap = { version = "4.5.60", features = ["derive", "env"] }
clap-cargo = { version = "0.14", default-features = false }
toml = { version = "1.0", default-features = false, features = ["parse", "display", "serde"] }
dialoguer = { version = "0.11.0", default-features = false }
dotenv = { version = "0.15", default-features = false }

# Cryptography & Blockchain
bip39 = { version = "2.2.0", default-features = false }
chacha20poly1305 = { version = "0.10.1", default-features = false }
x25519-dalek = { version = "2", default-features = false, features = ["static_secrets", "zeroize"] }
ed25519-zebra = { version = "4", default-features = false }
hex = { version = "0.4.3", default-features = false }
k256 = { version = "0.13.3", default-features = false }
rand = { version = "0.8.5", default-features = false }
schnorrkel = { version = "0.11.5", default-features = false }
hkdf = { version = "0.12", default-features = false }
argon2 = { version = "0.5", default-features = false, features = ["alloc"] }
sha2 = { version = "0.10.8", default-features = false }
sha3 = { version = "0.10.8", default-features = false }
tnt-bls = { version = "0.1.8", default-features = false }
tiny-keccak = { version = "2.0.2", default-features = false }
crc32fast = { version = "1.5", default-features = false }

# Data Structures & Serialization
bitvec = { version = "1.0.1", default-features = false, features = ["atomic", "alloc"] }
bincode = { version = "1.3.3", default-features = false }
cid = { version = "0.11.1", default-features = false }
serde = { version = "1.0.208", default-features = false }
serde_bytes = { version = "0.11.15", default-features = false }
serde_json = { version = "1.0", default-features = false }
serde_yaml = { version = "0.9", default-features = false }
serde_test = { version = "1.0.177", default-features = false }
dynosaur = { version = "0.2.0", default-features = false }
bytes = { version = "1.10.1", default-features = false }
hashbrown = { version = "0.16.1", default-features = false }
base64 = { version = "0.22.0", default-features = false }
rust_decimal = { version = "1.37", default-features = false }
jsonwebtoken = { version = "9", default-features = false }
pasetors = { version = "0.7.7", default-features = false }
pem = { version = "3.0", default-features = false }

# Error Handling & Logging
anyhow = { version = "1.0.99", default-features = false }
color-eyre = { version = "0.6", default-features = false }
colored = { version = "3.0.0", default-features = false }
log = { version = "0.4.22", default-features = false }
thiserror = { version = "2.0.17", default-features = false }
tracing = { version = "0.1", default-features = false }
tracing-subscriber = { version = "0.3", default-features = false }

# Networking & HTTP
jsonrpsee = { version = "0.24", default-features = false }
jsonrpc-core = { version = "18.0.0", default-features = false }
jsonrpc-http-server = { version = "18.0.0", default-features = false }
libp2p = { version = "0.54.1", default-features = false }
reqwest = { version = "0.12.22", default-features = false }
http = { version = "1.0.0", default-features = false }
url = { version = "2.5.2", default-features = false }
serde_with = { version = "3.14.0", default-features = false }
hyper = { version = "1.6.0", default-features = false }
hyperlocal = { version = "0.9.1", default-features = false }
hyper-util = { version = "0.1", default-features = false }
http-body-util = { version = "0.1.3", default-features = false }
dashmap = { version = "6.1.0", default-features = false }
cloud-hypervisor-client = { version = "0.3.2", default-features = false }
kube = { version = "1.1.0", default-features = false }
k8s-openapi = { version = "0.25.0", default-features = false }
axum = { version = "0.8", default-features = false }
openssl-sys = { version = "0.9.109", default-features = false }
rtnetlink = { version = "0.20.0", default-features = false }
ipnet = { version = "2.11.0", default-features = false }
rustls = { version = "0.23.31", default-features = false, features = ["std"] }
tokio-rustls = { version = "0.26.2", default-features = false, features = ["tls12"] }
rustls-pemfile = { version = "2.2.0", default-features = false }
rcgen = { version = "0.14.7", default-features = false, features = ["pem"] }
hyper-rustls = { version = "0.27.7", default-features = false, features = ["http2", "ring"] }
local-ip-address = "0.6.5"

# System & OS
parking_lot = { version = "0.12.4", default-features = false }
tempfile = { version = "3.25.0", default-features = false }
uuid = { version = "1.22.0", default-features = false }
blake3 = { version = "1.8.3", default-features = false }
tar = { version = "0.4.44", default-features = false }
xz = { version = "0.1.0", default-features = false }
walkdir = { version = "2.5.0", default-features = false }
fatfs = { version = "0.3.6", default-features = false }
tokio-vsock = { version = "0.7.1", default-features = false }
nix = { version = "0.31.1", default-features = false }
capctl = { version = "0.2.4", default-features = false }
netdev = { version = "0.41.0", default-features = false }
nftables = { version = "0.6.3", default-features = false }

# Development & Testing
auto_impl = { version = "1.2.1", default-features = false }
eigenlayer-contract-deployer = { version = "0.4.0", default-features = false }
cargo_toml = { version = "0.21.0", default-features = false }
docktopus = { version = "0.4.0-alpha.1", default-features = false }
itertools = { version = "0.14.0", default-features = false }
paste = { version = "1.0.15", default-features = false }
proc-macro2 = { version = "1.0", default-features = false }
quote = { version = "1.0", default-features = false }
syn = { version = "2.0", default-features = false }
trybuild = { version = "1.0", default-features = false }
dirs = { version = "6.0.0", default-features = false }
indicatif = { version = "0.18.4", default-features = false }
document-features = { version = "0.2.11", default-features = false }
rustversion = { version = "1.0.21", default-features = false }
cargo-dist-schema = { version = "0.31.0", default-features = false }

# Time & Date
time = { version = "0.3.41", default-features = false }
chrono = { version = "0.4", default-features = false }

# System & OS
sysinfo = { version = "0.38.0", default-features = false }
num_cpus = { version = "1.17", default-features = false }
libc = { version = "0.2.175", default-features = false }

# gRPC & Protocol Buffers
tonic = { version = "0.13.1", default-features = false, features = ["tls-webpki-roots"] }
prost = { version = "0.13", default-features = false }
tonic-build = { version = "0.13.1", default-features = false }
tonic-web = { version = "0.14.5", default-features = false }

# Quality of Service
prometheus = { version = "0.14", default-features = false }
opentelemetry = { version = "0.29", default-features = false }
opentelemetry-prometheus = { version = "0.29", default-features = false }
opentelemetry_sdk = { version = "0.29", default-features = false }
opentelemetry-semantic-conventions = { version = "0.29", default-features = false }
opentelemetry_api = { version = "0.20", default-features = false }
tracing-loki = { version = "0.2", default-features = false }
tracing-opentelemetry = { version = "0.30", default-features = false }
urlencoding = { version = "2.1.3", default-features = false }

# Testing
test-log = { version = "0.2", default-features = false }
serial_test = { version = "3.4.0", default-features = false }

# Alloy (EVM)
alloy = { version = "1.0.35", default-features = false }
alloy-primitives = { version = "1.2.1", default-features = false }
alloy-json-abi = { version = "1.2.1", default-features = false }
alloy-json-rpc = { version = "1.0.35", default-features = false }
alloy-dyn-abi = { version = "1.5.7", default-features = false, features = ["eip712"] }
alloy-sol-types = { version = "1.2.1", default-features = false }
alloy-rlp = { version = "0.3.12", default-features = false }
alloy-rpc-client = { version = "1.0.35", default-features = false }
alloy-rpc-types = { version = "1.0.35", default-features = false }
alloy-rpc-types-eth = { version = "1.0.35", default-features = false }
alloy-provider = { version = "1.0.35", default-features = false, features = ["reqwest", "ws"] }
alloy-pubsub = { version = "1.6.3", default-features = false }
alloy-signer = { version = "1.3.0", default-features = false }
alloy-signer-local = { version = "1.3.0", default-features = false }
alloy-network = { version = "1.0.35", default-features = false }
alloy-contract = { version = "1.0.35", default-features = false }
alloy-consensus = { version = "1.0.35", default-features = false }
alloy-eips = { version = "1.0.35", default-features = false }
alloy-transport = { version = "1.0.35", default-features = false }
alloy-transport-http = { version = "1.0.35", default-features = false }
ripemd = { version = "0.1.3", default-features = false }
libsecp256k1 = { version = "0.7.2", default-features = false }

# Remote signing
alloy-signer-aws = { version = "1.0.35", default-features = false }
alloy-signer-gcp = { version = "1.0.35", default-features = false }
alloy-signer-ledger = { version = "1.0.35", default-features = false, features = ["eip712"] }
aws-config = { version = "1", default-features = false }
aws-sdk-ec2 = { version = "1", default-features = false }
aws-sdk-kms = { version = "1", default-features = false }
gcloud-sdk = { version = "0.27.4", default-features = false }
gcp_auth = { version = "0.12" }

# Arkworks
ark-bn254 = { version = "0.5.0", default-features = false }
ark-ec = { version = "0.5.0", default-features = false }
ark-ff = { version = "0.5.0", default-features = false }
ark-serialize = { version = "0.5.0", default-features = false, features = ["derive"] }
num-bigint = { version = "0.4.6", default-features = false }
num-traits = { version = "0.2.19", default-features = false }
rayon = { version = "1", default-features = false }
zeroize = { version = "1.8.1", default-features = false }
zerocopy = { version = "0.8", default-features = false }

# Eigenlayer
eigensdk = { version = "2.0.0", default-features = false }
rust-bls-bn254 = { version = "0.2.1", default-features = false }
testcontainers = { version = "0.23.1", default-features = false }

# Metrics
metrics = { version = "0.24.2", default-features = false }

# x402 protocol
x402-types = { version = "1", default-features = false }
x402-axum = { version = "1", default-features = false }
x402-chain-eip155 = { version = "1", default-features = false }

# AWS SDK (additional)
aws-sdk-lambda = { version = "1", default-features = false }
aws-sdk-eks = { version = "1", default-features = false }
aws-sdk-autoscaling = { version = "1", default-features = false }
aws-sdk-cloudwatchlogs = { version = "1", default-features = false }
aws-smithy-types = { version = "1.4", default-features = false }
aws-smithy-runtime = { version = "1.7", default-features = false }
aws-smithy-mocks-experimental = { version = "0.2", default-features = false }
aws-lc-rs = { version = "1.13", default-features = false }

# Azure SDK
azure_core = { version = "0.20", default-features = false }
azure_identity = { version = "0.20", default-features = false }

# Additional dependencies
openssl = { version = "0.10", default-features = false }
zip = { version = "8.4", default-features = false }
warp = { version = "0.3", default-features = false }
shell-escape = { version = "0.1", default-features = false }
aes-gcm = { version = "0.10", default-features = false, features = ["aes", "alloc", "getrandom"] }
mockall = { version = "0.14", default-features = false }
tokio-test = { version = "0.4", default-features = false }
wiremock = { version = "0.6", default-features = false }
proptest = { version = "1.0" }
mockito = { version = "1.0", default-features = false }
regex = { version = "1.10", default-features = false }
protobuf-src = "2.1"
flate2 = { version = "1.0" }
xz2 = { version = "0.1", default-features = false }
hex-literal = { version = "1.1", default-features = false }
hmac = { version = "0.12", default-features = false }
subtle = { version = "2", default-features = false }

# CI: minimize codegen for faster compiles (debug checks still on)
[profile.ci]
inherits = "dev"
opt-level = 0
debug = 0
codegen-units = 256
incremental = false

[profile.ci.build-override]
opt-level = 0
debug = 0

[profile.dev.package.backtrace]
opt-level = 3

[profile.release.package."cargo-tangle"]
debug = true

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
